syntax = "proto3";
package client;

message Client {
    string id =1;
    string  nom = 2;
    string adresse = 3;
    
}

message CreateClientRequest {
    string nom =1;
    string adresse=2;
}

message CreateClientResponse {
    string id = 1;
}

message GetClientRequest {
    string id = 1;
}

message GetClientResponse {
    Client client = 1;
}

message SearchClientsRequest {
    
}

message SearchClientsResponse {
    repeated Client clients = 1;
}

service ClientService {
    rpc GetClient(GetClientRequest) returns (GetClientResponse);
    rpc SearchClients(SearchClientsRequest) returns (SearchClientsResponse);
    rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);
// Ajouter d'autres mÃ©thodes au besoin
}
